# Multiplebackup

./: .gitignore  Brute_Force  CMakeCache.txt  CodeTest  GenData  GenPredictedTrace  GenTrace  Makefile  MulSim_centralize  MulSim_offline  MulSim_parallel  MultipleCoor  Multiple_Coloring  Multiple_Failure  Multiple_Failure_idle  NewBruteForce  NewgenMLP  ParaAgent  ParaCoordinator  README.md  RepairSimulator  RepairSimulator_new  Sim_centralize  Sim_multiple  Sim_offline  Sim_parallel  Stripe099.out.bak  clay_sim  claysim.cc  cmake_install.cmake  compile.sh  compile_commands.json  dealbatch.py  file.py  final_cpp_trace.txt  genMLP  log.txt  multi_test.py  multi_test0.py  multi_test1.py  (+62 more)
blkDir/: Clay-424-0-0
conf/: sysSetting.xml  sysSetting_example.xml  trace_example.txt
offline/: RSPIPE_12_8_1.xml  RSPIPE_14_10_1.xml  RSPIPE_4_2_1.xml  RSPIPE_6_4_1.xml  RSPIPE_9_6_1.xml
output/: 1410_4_20_10  comparison1410_4_new.out  test_128_3_0  test_128_3_1  test_128_4_1  test_1410_2_0  test_1410_2_1  test_1612_3_0  test_1612_3_1  test_1612_4_0  test_64_2_1  test_96_3_0
scripts/: cluster_bandwidth.py  limit_bandwidth.sh  preprocess_trace.py  rm.sh  run_test.sh  start.py  stop.py  sync.sh  test.py  test.sh  varying_code.sh
src/: Brute_Force.cc  CMakeLists.txt  CodeTest.cc  GenPredictedTrace.cc  GenTrace.cc  MLPredictor.hh  Makefile  MulSim_centralize.cc  MulSim_offline.cc  MulSim_parallel.cc  MultipleCoor.cc  MultipleCoor_heterogeneous.cc  Multiple_Coloring.cc  Multiple_Failure.cc  NewBruteForce.cc  NewgenMLP.cc  ParaCoordinator.cc  RepairScheduler_new.hh  RepairSimulator.cc  RepairSimulator_new.cc  Sim_centralize.cc  Sim_multiple.cc  Sim_offline.cc  Sim_parallel.cc  cmake_install.cmake  genMLP.cc  gendata.py
src/common/: CMakeCache.txt  Config.cc  Config.hh  Coordinator.cc  Coordinator.hh  Makefile  RepairScheduler.cc  RepairScheduler.hh  Stripe.cc  Stripe.hh  StripeStore.cc  StripeStore.hh  TraceReader.cc  TraceReader.hh  TradeoffPoints.cc  Worker.cc  Worker.hh  cmake_install.cmake
src/ec/: BUTTERFLY.cc  Clay.cc  Computation.cc  Computation.hh  ECDAG.cc  ECDAG.hh  ECNode.cc  ECNode.hh  Makefile  NodeBatchTask.cc  Task.cc  cmake_install.cmake  reed_sol.cc  reed_sol.hh
src/genPicture/: ana.R  ana.py  analyzedata.py  gen.js  plot.R  pseudocode.docx
src/inc/: include.hh
src/protocol/: Makefile  cmake_install.cmake
src/sol/: CentSolution.cc  CentSolution.hh  Makefile  OfflineSolution.cc  OfflineSolution.hh  ParallelSolution.cc  ParallelSolution.hh  RepairBatch.cc  RepairBatch.hh  SolutionBase.cc  SolutionBase.hh  cmake_install.cmake
src/util/: Logger.hh  Makefile  RedisUtil.cc  cmake_install.cmake  galois.c  jerasure.c
(+287 files in other folders)
