# minimum version of cmake
cmake_minimum_required (VERSION 3.1)

# project name
project (ParaFullNode_exe)

add_subdirectory(common)
add_subdirectory(dist)
add_subdirectory(ec)
add_subdirectory(sol)
add_subdirectory(protocol)
add_subdirectory(util)

aux_source_directory(. DIR_SRCS)
add_executable(Sim_centralize Sim_centralize.cc)
add_executable(Sim_offline Sim_offline.cc)
add_executable(Sim_parallel Sim_parallel.cc)
add_executable(Sim_multiple Sim_multiple.cc)
add_executable(MulSim_centralize MulSim_centralize.cc)
add_executable(MulSim_offline MulSim_offline.cc)
add_executable(MulSim_parallel MulSim_parallel.cc)
add_executable(ParaCoordinator ParaCoordinator.cc)
add_executable(ParaAgent ParaAgent.cc)
add_executable(CodeTest CodeTest.cc)
add_executable(GenData GenData.cc)
add_executable(MultipleCoor MultipleCoor.cc)
add_executable(Multiple_Coloring Multiple_Coloring.cc)
add_executable(Multiple_Failure Multiple_Failure.cc)
add_executable(Brute_Force Brute_Force.cc)
add_executable(NewBruteForce NewBruteForce.cc)
add_executable(genMLP genMLP.cc)
add_executable(NewgenMLP NewgenMLP.cc)
add_executable(RepairSimulator_new RepairSimulator_new.cc)
add_executable(RepairSimulator RepairSimulator.cc)


target_link_libraries(Sim_centralize common ec sol util)
target_link_libraries(Sim_offline common ec sol util)
target_link_libraries(Sim_parallel common ec sol util)
target_link_libraries(Sim_multiple common ec sol util)
target_link_libraries(MulSim_centralize common ec sol util pthread)
target_link_libraries(MulSim_offline common ec sol util pthread)
target_link_libraries(MulSim_parallel common ec sol util pthread)
target_link_libraries(ParaCoordinator common ec sol util protocol)
target_link_libraries(ParaAgent common ec sol util protocol pthread)
target_link_libraries(CodeTest common ec sol util protocol pthread)
target_link_libraries(GenData common ec sol util protocol pthread)
target_link_libraries(MultipleCoor common ec sol util protocol pthread)
target_link_libraries(Multiple_Coloring common ec sol util protocol pthread)
target_link_libraries(Multiple_Failure common ec sol util protocol pthread)
target_link_libraries(Brute_Force common ec sol util protocol pthread)
target_link_libraries(NewBruteForce common ec sol util protocol pthread)
target_link_libraries(genMLP common ec sol util protocol pthread dist)
target_link_libraries(NewgenMLP common ec sol util protocol pthread dist)
target_link_libraries(RepairSimulator common ec sol util protocol pthread)
target_link_libraries(RepairSimulator_new common ec sol util protocol pthread)
